[mobile] fix menu header layout bug

--- a/src/assets/scss/menus/panels/panel.events.scss
+++ b/src/assets/scss/menus/panels/panel.events.scss
@@ -335,6 +335,15 @@
 			margin: 0;
 			padding: 0 0 0 0;
 
+            // mobile
+            @include breakpoint ( small only ) {
+
+                top: 4rem;
+
+                height: calc( 100% - 4rem );
+
+            }
+
 			.calendar-fail {
 
 				display: flex;
