--- a/src/assets/scss/menus/panels/panel.globals.scss
+++ b/src/assets/scss/menus/panels/panel.globals.scss
@@ -37,6 +37,7 @@
         @include breakpoint ( small only ) {
 
             height: calc( 100vh - 4rem );
+            padding: 4rem 0 0 0;
 
         }
 
